--- a/index.html
+++ b/index.html
@@ -6,41 +6,62 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>My Feed</h1>
 
-<header>
-  <h1>My Feed</h1>
-
-  <div class="menu">
-    <button id="menu-button">Menu ☰</button>
-    <div id="dropdown-menu" class="dropdown hidden">
-      <li><a href="#">Feed</a></li>
-      <li><a href="#">Gallery</a></li>
-      <li><a href="#">Games</a></li>
+    <div class="menu">
+      <button id="menu-button">Menu ☰</button>
+      <ul id="dropdown-menu" class="dropdown hidden">
+        <li><a href="#feed">Feed</a></li>
+        <li><a href="#gallery-page">Gallery</a></li>
+        <li><a href="#games">Games</a></li>
+      </ul>
     </div>
-  </div>
-</header>
+  </header>
 
-<section class="controls">
-  <input id="search" type="text" placeholder="Search..." />
-  <button id="refresh">Refresh</button>
-</section>
-<div id="feed-container"></div>
+  <main>
+    <!-- FEED SECTION -->
+    <section id="feed">
+      <section class="controls">
+        <input id="search" type="text" placeholder="Search..." />
+        <button id="refresh">Refresh</button>
+      </section>
 
-<p id="status" aria-live="polite"></p>
+      <p id="status" aria-live="polite"></p>
 
-<main>
-    <form id="post-form">
+      <form id="post-form">
         <input id="post-title" type="text" placeholder="Title" required />
         <textarea id="post-content" placeholder="Content" required></textarea>
         <button type="submit">Add</button>
-    </form>
-    <div id="feed-container"></div>
-</main>
+      </form>
 
-<footer>
+      <div id="feed-container"></div>
+    </section>
+
+    <!-- GALLERY SECTION -->
+    <section id="gallery-page" class="gallery-page">
+      <h2>Galerie d'images</h2>
+
+      <div class="gallery-toolbar">
+        <button id="view-grid" aria-pressed="true">Grid</button>
+        <button id="view-list" aria-pressed="false">List</button>
+      </div>
+
+      <section class="gallery-layout">
+        <div id="gallery" class="gallery gallery--grid"></div>
+
+        <aside class="preview">
+          <img id="preview-img" alt="" />
+          <p id="preview-title"></p>
+        </aside>
+      </section>
+    </section>
+  </main>
+
+  <footer>
     <p>© 2026</p>
-</footer>
+  </footer>
 
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
