--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
         <button id="view-list" aria-pressed="false">List</button>
       </div>
 
+      <form id="image-form" class="image-form">
+        <input id="image-file" type="file" accept="image/*" required />
+        <input id="image-title" type="text" placeholder="Image title" />
+        <button type="submit">Add image</button>
+      </form> 
+
+
       <section class="gallery-layout">
         <div id="gallery" class="gallery gallery--grid"></div>
 
