--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
       <div id="feed-container"></div>
     </section>
 
+    <!-- AIDS SECTION-->
+    <section class="ad-banner">
+        <img id="ad-img" alt="Ad banner" />
+    </section>
+
+
     <!-- GALLERY SECTION -->
     <section id="gallery-page" class="gallery-page">
       <h2>Galerie d'images</h2>
